# Parallel_VRP

./: .gitignore  dockerfile  install-linux.sh
master-slave/source-code/version-2/: CMakeLists.txt  benchmark_runs.sh  benchmark_runs_simple.sh  build.sh  run_cases_dynamic_params.sh  run_cases_num_workers.sh  run_cases_pull_elite.sh  run_cases_push_elite.sh  script.sh
master-slave/source-code/version-2/src/: cli.hpp  config.cpp  config.hpp  logger.cpp  main.cpp  neighborhoods.cpp  parallel.cpp  plot_convergence.py  rc.hpp  solutions.cpp  solutions.hpp
master-slave/source-code/version-2/statistics/100/: benchmark-100.-20260616-035334-summary.txt  benchmark-100.-20260616-035334.csv  benchmark-100.-20260616-035858-summary.txt  benchmark-100.-20260616-035858.csv  benchmark-100.-20260616-040411-summary.txt  benchmark-100.-20260616-040411.csv  benchmark-100.-20260616-040919-summary.txt  benchmark-100.-20260616-040919.csv  benchmark-100.-20260616-041534-summary.txt  benchmark-100.-20260616-041534.csv  benchmark-100.-20260616-042136-summary.txt  benchmark-100.-20260616-042136.csv  benchmark-100.-20260616-042737-summary.txt  benchmark-100.-20260616-042737.csv  benchmark-100.-20260616-043436-summary.txt  benchmark-100.-20260616-043436.csv  benchmark-100.-20260616-044123-summary.txt  benchmark-100.-20260616-044123.csv  benchmark-100.-20260616-044803-summary.txt  benchmark-100.-20260616-044803.csv  benchmark-100.-20260616-045419-summary.txt  benchmark-100.-20260616-045419.csv  benchmark-100.-20260616-050025-summary.txt  benchmark-100.-20260616-050025.csv  benchmark-100.-20260616-050618-summary.txt  benchmark-100.-20260616-050618.csv  benchmark-100.-20260616-051328-summary.txt  benchmark-100.-20260616-051328.csv  benchmark-100.-20260616-052034-summary.txt  benchmark-100.-20260616-052034.csv  benchmark-100.-20260616-052735-summary.txt  benchmark-100.-20260616-052735.csv  benchmark-100.-20260616-053536-summary.txt  benchmark-100.-20260616-053536.csv  benchmark-100.-20260616-054331-summary.txt  benchmark-100.-20260616-054331.csv  benchmark-100.-20260616-063731-summary.txt  benchmark-100.-20260616-063731.csv  benchmark-100.-20260616-064252-summary.txt  benchmark-100.-20260616-064252.csv  (+68 more)
master-slave/source-code/version-2/statistics/200/: benchmark-200.-20260617-002552-summary.txt  benchmark-200.-20260617-002552.csv  benchmark-200.-20260617-004332-summary.txt  benchmark-200.-20260617-004332.csv  benchmark-200.-20260617-010417-summary.txt  benchmark-200.-20260617-010417.csv  benchmark-200.-20260617-012829-summary.txt  benchmark-200.-20260617-012829.csv  benchmark-200.-20260617-015546-summary.txt  benchmark-200.-20260617-015546.csv  benchmark-200.-20260617-022615-summary.txt  benchmark-200.-20260617-022615.csv  benchmark-200.-20260617-025930-summary.txt  benchmark-200.-20260617-025930.csv  benchmark-200.-20260617-031700-summary.txt  (+81 more)
sequence-tabu-search/rust/: Cargo.toml  main.rs  script.sh  solutions.rs
sequential-algorithm/cpp/: CMakeLists.txt  benchmark_runs.sh  build.sh  script.sh
sequential-algorithm/cpp/src/: cli.hpp  config.cpp  config.hpp  errors.hpp  logger.cpp  logger.hpp  neighborhoods.cpp  rc.hpp  routes.cpp  routes.hpp  solutions.cpp  solutions.hpp
sequential-algorithm/cpp/statistics/: benchmark-10.-20260630-094337-summary.txt  benchmark-10.-20260630-094337.csv  benchmark-100.-20260615-214822-summary.txt  benchmark-100.-20260615-214822.csv  benchmark-100.-20260619-070041-summary.txt  benchmark-100.-20260619-070041.csv  benchmark-12.-20260630-094349-summary.txt  benchmark-12.-20260630-094349.csv  benchmark-20.-20260630-094409-summary.txt  benchmark-20.-20260630-094409.csv  benchmark-200.-20260615-221605-summary.txt  benchmark-200.-20260615-221605.csv  benchmark-200.-20260619-083747-summary.txt  benchmark-200.-20260619-083747.csv  benchmark-50.-20260630-094456-summary.txt  benchmark-50.-20260630-094456.csv  benchmark-6.-20260630-094315-summary.txt  benchmark-6.-20260630-094315.csv
(+294 files in other folders)
