[package]
name = "sequence-tabu-search"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
mimalloc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
atomic_float = "1.0"

[profile.release]
opt-level = 3

[[bin]]
name = "sequence-tabu-search"
path = "main.rs"
